--- a/lib/index.css
+++ b/lib/index.css
@@ -6,6 +6,7 @@
 @import "/lib/pages/repository/repository.css";
 
 @import "/lib/components/repository-list/repository-list.css";
+@import "/lib/components/commits-list/commits-list.css";
 
 .header {
   padding-top: 10px;
@@ -20,4 +21,12 @@
   padding: 0px 20px;
   width: 100%;
   max-width: 980px;
+}
+
+.sep {
+  color: #CCC;
+  top: 1px;
+  position: relative;
+  margin-left: 5px;
+  margin-right: 5px;
 }
