--- a/lib/pages/repository/repository.css
+++ b/lib/pages/repository/repository.css
@@ -9,6 +9,10 @@
   font-size: 16px;
 }
 
+.readme:hover {
+  background-color: #FFFFFF !important;
+}
+
 .readme pre {
   padding: 16px;
   overflow: auto;
@@ -34,7 +38,18 @@
   font-size: inherit;
 }
 
-.readme ul {
+.readme td, .readme th {
+  padding: 3px;
+  padding-top: 10px;
+  padding-right: 20px;
+}
+
+.readme thead {
+  border-bottom: 1px solid #CCC;
+  margin-bottom: 5px;
+}
+
+.readme ul, .readme ol {
   padding: 0;
   padding-left: 2em;
   margin-top: 0;
@@ -49,6 +64,10 @@
   background-color: #FFFFFF;
 }
 
+.menu-item:hover {
+  background-color: #F8F8F8; 
+}
+
 .commit_details {
   background-color: #FFFFFF;
   height: 36px;
@@ -59,6 +78,12 @@
 
 .commit_sha {
   color: #999;
+  padding-right: 5px;
+}
+
+.commit_sha ~ .octicon {
+  color: #80A6CD;
+  padding-top: 2px;
 }
 
 .commit_date {
