--- a/lib/pages/commits/commits.css
+++ b/lib/pages/commits/commits.css
@@ -1,9 +1,24 @@
+main.commits-page {
+  padding-top: 260px;
+}
+
+main.commits-page .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+}
+
 #commit_timeline {
   margin-top: 20px !important;
   margin-bottom: 20px !important;
   height: 207px !important;
   border: 10px solid #F7F7F7 !important;
   border-radius: 5px !important;
+  position: fixed !important;
+  top: 19px !important;
+  left: 0 !important;
+  z-index: 999 !important;
 }
 
 .vco-feature { display: none; }
