--- a/lib/pages/commits/commits.css
+++ b/lib/pages/commits/commits.css
@@ -10,6 +10,7 @@ main.commits-page .header {
 }
 
 #commit_timeline {
+  width: 100%;
   margin-top: 20px !important;
   margin-bottom: 20px !important;
   height: 207px !important;
@@ -19,12 +20,14 @@ main.commits-page .header {
   top: 19px !important;
   left: 0 !important;
   z-index: 999 !important;
+  box-shadow: 0px 3px 7px #EDEDED !important;
+  background-color: #F7F7F7 !important;
 }
 
 .vco-feature { display: none; }
 .timenav-background { display: none; }
 .vco-toolbar { display: none; }
 
-.vco-storyjs {
+.vco-storyjs .vco-loading, .vco-storyjs {
   background-color: #F7F7F7 !important;
 }
