--- a/lib/pages/home/home.css
+++ b/lib/pages/home/home.css
@@ -22,9 +22,9 @@ input[type=text] {
 }
 
 .sync.pending .octicon {
-  -webkit-animation: spin 4s linear infinite;
-  -moz-animation: spin 4s linear infinite;
-  animation: spin 4s linear infinite;
+  -webkit-animation: spin .2s linear infinite;
+  -moz-animation: spin .2s linear infinite;
+  animation: spin .2s linear infinite;
 }
 
 .sync.pending:after {
