--- a/lib/components/file-blob/file-blob.html
+++ b/lib/components/file-blob/file-blob.html
@@ -2,7 +2,7 @@
 <div class="menu-item code">
   <div class="container">
     <div class="columns">
-      <div class="column one-column">
+      <div class="column single-column">
         <pre><code>{{{ model.get 'blob' }}}</code></pre>
       </div>
     </div>
