No line wrapping of file blobs

--- a/lib/components/file-blob/file-blob.css
+++ b/lib/components/file-blob/file-blob.css
@@ -20,6 +20,7 @@ pre .line {
 	counter-increment: linecounter;
   transition: background-color ease-in .2s;
   width: 100%;
+  white-space: nowrap;
 }
 pre .line:before {
   padding-top: 3px;
