--- a/lib/components/commits-list/commits-list.css
+++ b/lib/components/commits-list/commits-list.css
@@ -2,6 +2,11 @@ nav.menu {
   border-color: #E5E5E5;
 }
 
+.blankslate {
+  height: 100px !important;
+  padding-top: 0 !important;
+}
+
 .commit_item {
   height: 52px;
   background-color: #FFF;
