--- a/lib/components/file-blob/file-blob.css
+++ b/lib/components/file-blob/file-blob.css
@@ -10,6 +10,11 @@
 code {
   line-height: 17px;
   width: 100%;
+  tab-size: 2;
+}
+
+pre .line span {
+  white-space: nowrap;
 }
 
 pre {
@@ -20,7 +25,7 @@ pre .line {
 	counter-increment: linecounter;
   transition: background-color ease-in .2s;
   width: 100%;
-  white-space: nowrap;
+  white-space: pre;
 }
 pre .line:before {
   padding-top: 3px;
