--- a/lib/pages/home/home.css
+++ b/lib/pages/home/home.css
@@ -12,14 +12,27 @@ input[type=text] {
   cursor: pointer;
 }
 
+.btn.btn-github {
+  width: 180px;
+  float: right;
+  margin-top: 10px;
+  height: 34px;
+  border-color: #5CA941;
+}
+
+.header .state {
+  margin-top: 10px;
+  line-height: 26px;
+}
+
 .label, .state {
   float: right;
   margin-top: 9px;
-  margin-right: 15px;
+  margin-right: 10px;
 }
 
 .label {
-  padding-top: 5px;
+  padding-top: 9px;
   margin-right: 10px;
   color: #B8B8B8;
 }
@@ -27,6 +40,7 @@ input[type=text] {
 .sync {
   float: right;
   margin-top: 10px;
+  margin-right: 10px;
 }
 
 
@@ -35,9 +49,9 @@ input[type=text] {
 }
 
 .sync.pending .octicon {
-  -webkit-animation: spin .2s linear infinite;
-  -moz-animation: spin .2s linear infinite;
-  animation: spin .2s linear infinite;
+  -webkit-animation: spin 2s linear infinite;
+  -moz-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
 }
 
 .sync.pending:after {
