--- a/lib/index.css
+++ b/lib/index.css
@@ -13,18 +13,22 @@
 @import "/lib/components/file-blob/file-blob.css";
 
 .header {
-  padding-top: 10px;
+  padding-top: 0;
   padding-bottom: 10px;
   width: 100%;
   background-color: #F5F5F5;
   border-bottom: 1px solid #E5E5E5;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .container {
   padding: 0px 20px;
   width: 100%;
   max-width: 980px;
+}
+
+.container h1 {
+  color: #999;
 }
 
 .container .container {
