--- a/lib/pages/commits/commits.css
+++ b/lib/pages/commits/commits.css
@@ -1,5 +1,5 @@
 main.commits-page {
-  padding-top: 260px;
+  padding-top: 282px;
 }
 
 main.commits-page .header {
@@ -13,11 +13,11 @@ main.commits-page .header {
   width: 100%;
   margin-top: 20px !important;
   margin-bottom: 20px !important;
-  height: 207px;
+  height: 210px !important;
   border: 10px solid #F7F7F7 !important;
   border-radius: 5px !important;
   position: fixed !important;
-  top: 19px !important;
+  top: 35px !important;
   left: 0 !important;
   z-index: 999 !important;
   box-shadow: 0px 3px 7px #EDEDED !important;
