--- a/lib/index.css
+++ b/lib/index.css
@@ -3,6 +3,7 @@
 @import "/node_modules/highlight.js/styles/github.css";
 @import "/node_modules/bootstrap-social/bootstrap-social.css";
 @import "/node_modules/font-awesome/css/font-awesome.css";
+@import "/node_modules/github-markdown-css/github-markdown.css";
 
 @import "/lib/pages/home/home.css";
 @import "/lib/pages/repository/repository.css";
