--- a/lib/pages/repository/repository.css
+++ b/lib/pages/repository/repository.css
@@ -5,13 +5,14 @@
 .readme {
   background-color: #FFFFFF;
   padding: 20px;
-  padding-top: 10px;
   font-size: 16px;
 }
 
 .readme:hover {
   background-color: #FFFFFF !important;
 }
+
+.readme br { display: none; }
 
 .readme pre {
   padding: 16px;
