Rename lib to client, fix file browsing

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -6,7 +6,7 @@
 
   <title>LocalHub: Your Own Personal GitHub</title>
 
-  <link rel="stylesheet" href="/lib/index.css">
+  <link rel="stylesheet" href="/client/index.css">
 </head>
 <body>
   <main role="main"></main>
