--- a/client/index.css
+++ b/client/index.css
@@ -5,17 +5,17 @@
 @import "/node_modules/font-awesome/css/font-awesome.css";
 @import "/node_modules/github-markdown-css/github-markdown.css";
 
-@import "/lib/pages/home/home.css";
-@import "/lib/pages/repository/repository.css";
-@import "/lib/pages/commits/commits.css";
-@import "/lib/pages/file/file.css";
+@import "/client/pages/home/home.css";
+@import "/client/pages/repository/repository.css";
+@import "/client/pages/commits/commits.css";
+@import "/client/pages/file/file.css";
 
-@import "/lib/components/repository-list/repository-list.css";
-@import "/lib/components/commits-list/commits-list.css";
-@import "/lib/components/file-blob/file-blob.css";
-@import "/lib/components/file-list/file-list.css";
+@import "/client/components/repository-list/repository-list.css";
+@import "/client/components/commits-list/commits-list.css";
+@import "/client/components/file-blob/file-blob.css";
+@import "/client/components/file-list/file-list.css";
 
-@import "/lib/styles/switch.css";
+@import "/client/styles/switch.css";
 
 .header {
   padding-top: 0;
