Lots of fixes, save spot

--- a/client/components/commits-list/commits-list.css
+++ b/client/components/commits-list/commits-list.css
@@ -2,10 +2,12 @@ nav.menu {
   border-color: #E5E5E5;
 }
 
+/*
 .blankslate {
   height: 100px !important;
   padding-top: 0 !important;
 }
+*/
 
 .commit_item {
   height: 52px;
