--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -6,10 +6,10 @@
 
   <title>LocalHub: Your Own Personal GitHub</title>
 
-  <link rel="stylesheet" href="/client/index.css">
+  <link rel="stylesheet" href="/dist/localhub.css">
 </head>
 <body>
-  <main role="main"></main>
+  <main role="main">{%partial content%}</main>
 
   <script src="/dist/localhub.js"></script>
 
