--- a/views/components/repository-list.html
+++ b/views/components/repository-list.html
@@ -1,7 +1,7 @@
 {%if ..length%}
 <ul>
-  {%each . as repo%}
-  <li class="repo-list-item public source">
+  {%each . as repo index%}
+  <li tabindex="{{ index|add 2 }}" class="repo-list-item public source">
     <h3 class="repo-list-name">
       <a href="#repository/{{ repo.get 'id' }}">{{ repo.get 'name' }}</a>
       <button class="open btn btn-sm" type="button" href="/api/repositories/open?path={{ repo.get 'location' }}">
