Starting to refactor with diffhtml

--- a/views/components/file-list.html
+++ b/views/components/file-list.html
@@ -18,7 +18,7 @@
 </div>
 
 <a class="menu-item commit_message">
-  {{ model.commit.oneline }}
+  {{{ model.commit.oneline }}}
 </a>
 
 {%if collection.models.0.get 'root'%}
