--- a/views/components/repository-list.html
+++ b/views/components/repository-list.html
@@ -3,10 +3,10 @@
   {%each . as repo index%}
   <li tabindex="{{ index|add 2 }}" class="repo-list-item public source">
     <h3 class="repo-list-name">
-      <a href="#repository/{{ repo.get 'id' }}">{{ repo.get 'name' }}</a>
-      <button class="open btn btn-sm" type="button" href="/api/repositories/open?path={{ repo.get 'location' }}">
+      <a href="#repository/{{ repo.id }}">{{ repo.name }}</a>
+      <button class="open btn btn-sm" type="button" href="/api/repositories/open?path={{ repo.location }}">
         <span class="octicon octicon-file-symlink-directory"></span>
-        Open {{ repo.get 'location' }}
+        Open {{ repo.location }}
       </button>
     </h3>
 
