--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -6,7 +6,7 @@
 
   <title>LocalHub: Your Own Personal GitHub</title>
 
-  <link rel="stylesheet" href="/dist/localhub.css">
+  <link rel="stylesheet" href="/client/index.css">
 </head>
 <body>
   <main role="main">{%partial content%}</main>
