Big commit that fixes some bugs, breaks a lot
Lots of work with Falcor and refactoring to make the application easier
to reason about.

There is a lot of breakage since the source is in flux.

--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -6,7 +6,12 @@
 
   <title>LocalHub: Your Own Personal GitHub</title>
 
+  {%if env == 'production'%}
+  <link rel="stylesheet" href="/dist/localhub.css">
+  {%else%}
   <link rel="stylesheet" href="/client/index.css">
+  {%endif%}
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 </head>
 <body>
   <main role="main">{%partial content%}</main>
